Finalize implementation and tests.
Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>